Avoid extra bullets in tabs on Firefox
Fixes trac issue #904

--- a/src/GeoNodePy/geonode/media/theme/site.css
+++ b/src/GeoNodePy/geonode/media/theme/site.css
@@ -124,7 +124,6 @@ padding: 4px;
 
 ul.x-tab-strip {
 margin: 0;
-list-style-type: inherit;
 }
 
 label {
